2008-08-07  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 545031 – list of recently used files is created world-readable

	* gtk/gtkrecentmanager.c:
	(gtk_recent_manager_real_changed): Set the recently-used.xbel
	file to 0600. (Guido Berhoerster)

2008-08-06  Michael Natterer  <mitch@imendio.com>

	* modules/printbackends/cups/gtkcupsutils.c
	(gtk_cups_connection_test_free): remove return value, this
	function returns void.

2008-08-06  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c
	* gtk/gtkiconview.c
	* gtk/gtkrange.c
	* gtk/gtkscrolledwindow.c
	* gtk/gtktreeview.c: remove CLAMPing from values passed to
	gtk_adjustment_set_value() since it does it right now.

2008-08-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.6 ===

	* gdk/tests/Makefile.am: Disable check-gdk-cairo test for now,
	since it breaks make distcheck.

2008-08-05  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_update_sensitivity): bail out
	early if priv->button is NULL to avoid zillions of warnings when
	destroying combo boxes that were working fine before the
	button sensitivity patch.

2008-08-05  Michael Natterer  <mitch@imendio.com>

	Bug 544858 – Seal GtkAdjustment

	* gtk/gtk.symbols
	* gtk/gtkadjustment.[ch] (struct GtkAdjustment): seal all struct
	members.

	Add accessors for all properties and additionally a new function
	gtk_adjustment_configure() which sets all properties at
	once. Patch by Christian Dywan and myself.

2008-08-05  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkadjustment.c (gtk_adjustment_set_value): clamp the value
	to [lower...upper-page_size] instead of only [lower...upper].

	* README: add note about this change.

	While this fix is correct and should have been there forever, it
	has the potential to break some corner cases, however these cases
	would set page_size to a value != 0 which suggests they want it
	honored.

2008-08-05  Michael Natterer  <mitch@imendio.com>
