@@ -1,3 +1,9 @@
+2008-08-07  Richard Hult  <richard@imendio.com>
+
+	* gdk/quartz/gdkscreen-quartz.c: (gdk_screen_get_monitor_plug_name)
+	(gdk_screen_get_monitor_height_mm, gdk_screen_get_monitor_width_mm):
+	Implement those, fixes loading python bindings.
+
 2008-08-07  Emmanuele Bassi  <ebassi@gnome.org>
 
 	Bug 545031 – list of recently used files is created world-readable
